refactor: removed useless endpoints
